deploy: 8ec4fe6ee0a3b0eefecd5e043397a6cced72e390

--- a/coverage.html
+++ b/coverage.html
@@ -118,52 +118,52 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AuthComponent.html">lib/src/components/auth/src/auth.component.ts</a>
             </td>
             <td>component</td>
             <td>AuthComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(5/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./miscellaneous/functions.html#createLoginForm">lib/src/components/auth/src/auth.constants.ts</a>
             </td>
             <td>function</td>
             <td>createLoginForm</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#PreloaderCn">lib/src/components/auth/src/auth.constants.ts</a>
             </td>
             <td>variable</td>
             <td>PreloaderCn</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/AuthService.html">lib/src/components/auth/src/auth.service.ts</a>
             </td>
             <td>injectable</td>
             <td>AuthService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(3/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -173,9 +173,9 @@
             </td>
             <td>interface</td>
             <td>JwtDto</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="25">
+                <span class="coverage-percent">25 %</span>
+                <span class="coverage-count">(1/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -185,21 +185,21 @@
             </td>
             <td>interface</td>
             <td>LoginPayload</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="20">
+                <span class="coverage-percent">20 %</span>
+                <span class="coverage-count">(1/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/AuthViewModel.html">lib/src/components/auth/src/auth.view-model.ts</a>
             </td>
             <td>injectable</td>
             <td>AuthViewModel</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/10)</span>
+            <td align="right" data-sort="70">
+                <span class="coverage-percent">70 %</span>
+                <span class="coverage-count">(7/10)</span>
             </td>
         </tr>
         <tr class="low">
