--- a/injectables/AuthViewModel.html
+++ b/injectables/AuthViewModel.html
@@ -119,6 +119,14 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>ViewModel for the authentication component. Handles Captcha interaction, login execution,
+and form state management.</p>
+
+            </p>
 
 
 
@@ -240,14 +248,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="65"
-                                    class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:65</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="84"
+                                    class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:84</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Performs user login using the form data. Handles errors and resets Captcha if necessary.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -277,14 +287,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="53"
-                                    class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:53</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="69"
+                                    class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:69</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Requests Captcha configuration and updates the form.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -314,14 +326,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="83"
-                                    class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:83</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="106"
+                                    class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:106</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Handles Captcha resolved event.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -332,6 +346,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -346,6 +361,10 @@
                                             </td>
 
 
+                                            <td>
+                                                    <p>String representing the Captcha resolution result.</p>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -387,7 +406,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:38</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:48</a></div>
                         </td>
                     </tr>
 
@@ -413,10 +432,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:35</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:42</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Signal containing Captcha configuration</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -440,7 +465,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:39</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:49</a></div>
                         </td>
                     </tr>
 
@@ -466,10 +491,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:36</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:45</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Login form object</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -492,10 +523,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:34</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:39</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Signal indicating if ReCaptcha is resolved</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -519,7 +556,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:37</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:47</a></div>
                         </td>
                     </tr>
 
@@ -548,7 +585,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:41</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:51</a></div>
                                 </td>
                             </tr>
 
@@ -570,7 +607,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:45</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:55</a></div>
                                 </td>
                             </tr>
 
@@ -592,9 +629,16 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:49</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/auth/src/auth.view-model.ts:62</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Checks if the current Captcha is Google ReCaptcha</p>
+</div>
+
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -617,12 +661,22 @@ import {CaptchaService} from &quot;../../../global/service&quot;;
 import {usePreloader} from &quot;../../../modules/preloader/src/use-preloader&quot;;
 import getCurrentTheme &#x3D; ThemeUtils.getCurrentTheme;
 
+/**
+ * ViewModel for the authentication component. Handles Captcha interaction, login execution,
+ * and form state management.
+ */
 @Injectable()
 export class AuthViewModel {
 
+  /** Signal indicating if ReCaptcha is resolved */
   readonly reCaptchaResolved &#x3D; signal&lt;boolean&gt;(undefined);
+
+  /** Signal containing Captcha configuration */
   readonly captchaConfig &#x3D; signal&lt;CaptchaResponse&gt;(undefined);
+
+  /** Login form object */
   readonly form &#x3D; Auth.createLoginForm();
+
   private readonly store &#x3D; inject(Store);
   private readonly authService &#x3D; inject(AuthService);
   private readonly captchaService &#x3D; inject(CaptchaService);
@@ -635,10 +689,16 @@ export class AuthViewModel {
     return getCurrentTheme();
   }
 
+  /**
+   * Checks if the current Captcha is Google ReCaptcha
+   * */
   get isReCaptcha() {
     return this.captchaConfig().type &#x3D;&#x3D;&#x3D; &quot;google&quot;;
   }
 
+  /**
+   * Requests Captcha configuration and updates the form.
+   * */
   getCaptcha() {
     this.captchaService.getCaptcha().pipe(
       usePreloader(this.store, this.preloaderChannel),
@@ -651,6 +711,9 @@ export class AuthViewModel {
     });
   }
 
+  /**
+   * Performs user login using the form data. Handles errors and resets Captcha if necessary.
+   * */
   doLogin() {
     this.authService.login(this.form.value as LoginPayload).pipe(
       usePreloader(this.store, this.preloaderChannel),
@@ -669,6 +732,10 @@ export class AuthViewModel {
     });
   }
 
+  /**
+   * Handles Captcha resolved event.
+   * @param payload String representing the Captcha resolution result.
+   */
   onCaptchaResolved(payload: string) {
     this.form.controls.captchaPayload.setValue(payload);
     this.reCaptchaResolved.set(true);
