--- a/miscellaneous/enumerations.html
+++ b/miscellaneous/enumerations.html
@@ -152,6 +152,12 @@
                         <span class="name "><b>AuthEvent</b><a href="#AuthEvent"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>Enumeration of authentication events.</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;Success
