--- a/miscellaneous/functions.html
+++ b/miscellaneous/functions.html
@@ -776,11 +776,17 @@
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Creates a login form.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="../miscellaneous/typealiases.html#LoginForm" target="_self" >FormGroup&lt;LoginForm&gt;</a></code>
 
                         </div>
+                            <div class="io-description">
+                                <p>FormGroup with fields for login, password, and Captcha.</p>
+
+                            </div>
                 </td>
             </tr>
         </tbody>
