--- a/miscellaneous/typealiases.html
+++ b/miscellaneous/typealiases.html
@@ -497,6 +497,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Type representing the login form.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code></code>
 </code>
                 </td>
