--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -650,6 +650,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Preloader channel for authentication</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
